k3s/site/site-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: site
  name: site-nginx
spec:
  selector:
    matchLabels:
      app: site
  replicas: 1
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: camzor/site
        ports:
        - containerPort: 80
