k3s/site/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: site
  name: site-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: site
