k3s/site/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: site
  name: site-ingress
spec:
  ingressClassName: "traefik"
  rules:
  - host: "camillevauchel.fr"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: site-service
            port:
              number: 80
